Comecando loo_grid_reg

--- a/extracting_meta_features.ipynb
+++ b/extracting_meta_features.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "33ea7b58",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "b8f3f420",
    "metadata": {},
    "outputs": [],
@@ -122,6 +122,82 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4d0e07a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import GridSearchCV, KFold\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "\n",
+    "# Evaluate Quantifier Recommender with Leave-One-Out\n",
+    "def loo_grid_reg(model_dict, meta_features_table, not_aggregated_evaluation_table, evaluation_table, param_grid, recommender_eval_path: str = None):\n",
+    "    aux_recommender_evaluation_table = pd.DataFrame(columns=[\"predicted_error\", \"true_error\"], index=evaluation_table.index)\n",
+    "    for quantifier, recommender in model_dict.items():\n",
+    "        # recommender_ = clone(recommender)\n",
+    "        for dataset in evaluation_table.index.levels[1]:\n",
+    "            recommender_ = clone(recommender)\n",
+    "            X_test = meta_features_table.loc[dataset].values\n",
+    "            X_test = np.array(X_test).reshape(1, -1)\n",
+    "            y_test = evaluation_table.loc[quantifier, dataset]['abs_error']\n",
+    "\n",
+    "            X_train = meta_features_table.drop(index=dataset).values\n",
+    "            y_train = evaluation_table.loc[quantifier].drop(index=dataset)['abs_error'].values\n",
+    "\n",
+    "            # nested tuning (inner CV) dentro do fold LOO (outer)\n",
+    "            inner_cv = KFold(n_splits=5, shuffle=True, random_state=42)\n",
+    "            gs = GridSearchCV(\n",
+    "                estimator=recommender_,\n",
+    "                param_grid=param_grid,   # chaves: \"C\", \"epsilon\", \"gamma\", \"kernel\", etc.\n",
+    "                scoring=\"neg_mean_absolute_error\",\n",
+    "                cv=inner_cv,\n",
+    "                # n_jobs=-1,\n",
+    "                refit=True,\n",
+    "                verbose=0\n",
+    "            )\n",
+    "            gs.fit(X_train, y_train)\n",
+    "            \n",
+    "            predicted_error = gs.predict(X_test)[0]\n",
+    "\n",
+    "            aux_recommender_evaluation_table.loc[(quantifier, dataset)] = [predicted_error, y_test]\n",
+    "    \n",
+    "    datasets = aux_recommender_evaluation_table.index.get_level_values('dataset').unique()\n",
+    "    recommender_evaluation_table = pd.DataFrame(columns=[\"predicted_ranking\", \"predicted_ranking_weights\", \"predicted_ranking_mae\",\n",
+    "                                                            \"true_ranking\", \"true_ranking_weights\", \"true_ranking_mae\"], index=datasets)\n",
+    "    for dataset in datasets:\n",
+    "        filtered_result = aux_recommender_evaluation_table.xs(dataset, level='dataset')\n",
+    "        \n",
+    "        predicted_ranking = filtered_result.sort_values(by='predicted_error').index.tolist()\n",
+    "        predicted_ranking_mae = [filtered_result.loc[quantifier, 'predicted_error'] for quantifier in predicted_ranking]\n",
+    "\n",
+    "        errors = np.array(predicted_ranking_mae)\n",
+    "        denominator = np.sum(1/errors)\n",
+    "        predicted_ranking_weights = (1/errors)/denominator\n",
+    "\n",
+    "        true_ranking = filtered_result.sort_values(by='true_error').index.tolist()\n",
+    "        true_ranking_mae = [filtered_result.loc[quantifier, 'true_error'] for quantifier in true_ranking]\n",
+    "\n",
+    "        errors = np.array(true_ranking_mae)\n",
+    "        if np.any(errors == 0):\n",
+    "            errors = np.array([1e-6 if x == 0 else x for x in errors])\n",
+    "        denominator = np.sum(1/errors)\n",
+    "        true_ranking_weights = (1/errors)/denominator\n",
+    "\n",
+    "        recommender_evaluation_table.loc[dataset] = [predicted_ranking, predicted_ranking_weights, predicted_ranking_mae,\n",
+    "                                                        true_ranking, true_ranking_weights, true_ranking_mae]\n",
+    "        \n",
+    "    if not recommender_eval_path is None:\n",
+    "        recommender_evaluation_table.to_csv(recommender_eval_path)\n",
+    "    \n",
+    "    not_agg_evaluation_table = not_aggregated_evaluation_table.copy(deep=True)\n",
+    "    not_agg_evaluation_table.sort_values(by=['quantifier', 'dataset'], inplace=True)\n",
+    "    not_agg_evaluation_table.reset_index(drop=True, inplace=True)\n",
+    "    \n",
+    "    return recommender_evaluation_table, not_agg_evaluation_table\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "00f2266c",
    "metadata": {},
    "outputs": [],
@@ -299,10 +375,321 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "998c46e8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finished 1043_ada_agnostic\n",
+      "Finished 1460_banana\n",
+      "Finished 1462_banknote-authentication\n",
+      "Finished 1466_cardiotocography\n",
+      "Finished 1475_first-order-theorem-proving\n",
+      "Finished 1479_hill-valley\n",
+      "Finished 1485_madelon\n",
+      "Finished 1489_phoneme\n",
+      "Finished 1494_qsar-biodeg\n",
+      "Finished 1496_ringnorm\n",
+      "Finished 1497_wall-robot-navigation\n",
+      "Finished 1504_steel-plates-fault\n",
+      "Finished 1507_twonorm\n",
+      "Finished 1526_wall-robot-navigation\n",
+      "Finished 1535_volcanoes-b5\n",
+      "Finished 1538_volcanoes-d1\n",
+      "Finished 1539_volcanoes-d2\n",
+      "Finished 1540_volcanoes-d3\n",
+      "Finished 1541_volcanoes-d4\n",
+      "Finished 1566_hill-valley\n",
+      "Finished 182_satimage\n",
+      "Finished 23_cmc\n",
+      "Finished 28_optdigits\n",
+      "Finished 294_satellite_image\n",
+      "Finished 2dplanes\n",
+      "Finished 30_page-blocks\n",
+      "Finished 312_scene\n",
+      "Finished 375_JapaneseVowels\n",
+      "Finished 40474_thyroid-allbp\n",
+      "Finished 40475_thyroid-allhyper\n",
+      "Finished 40733_yeast\n",
+      "Finished 44_spambase\n",
+      "Finished 4538_GesturePhaseSegmentationProcessed\n",
+      "Finished 60_waveform-5000\n",
+      "Finished 679_rmftsa_sleepdata\n",
+      "Finished AedesQuinx\n",
+      "Finished AedesSex\n",
+      "Finished ArabicDigit\n",
+      "Finished BNG\n",
+      "Finished BNG_breast-w\n",
+      "Finished GAMETES_Epistasis_2-Way_20atts_0.1H_EDM-1_1\n",
+      "Finished GAMETES_Epistasis_2-Way_20atts_0.4H_EDM-1_1\n",
+      "Finished HTRU\n",
+      "Finished MagicTelescope\n",
+      "Finished abalone\n",
+      "Finished ailerons\n",
+      "Finished anuranCalls\n",
+      "Finished balloon\n",
+      "Finished bank8FM\n",
+      "Finished churn\n",
+      "Finished clean2\n",
+      "Finished click-prediction\n",
+      "Finished cmc\n",
+      "Finished covtype_reduced\n",
+      "Finished cpu_act\n",
+      "Finished default_credit_card_clients\n",
+      "Finished delta_ailerons\n",
+      "Finished eeg\n",
+      "Finished electricity-normalized\n",
+      "Finished elevators\n",
+      "Finished file22f0e4a679\n",
+      "Finished file79b563a1a18\n",
+      "Finished file7b5365fa741c\n",
+      "Finished fri_c2_1000_10\n",
+      "Finished fried\n",
+      "Finished gina_agnostic\n",
+      "Finished houses\n",
+      "Finished jm1-processed\n",
+      "Finished kdd_JapaneseVowels\n",
+      "Finished kin8nm\n",
+      "Finished letter-recognition\n",
+      "Finished magic\n",
+      "Finished mozilla\n",
+      "Finished namao\n",
+      "Finished occupancy\n",
+      "Finished page-blocks\n",
+      "Finished parity5_plus_5\n",
+      "Finished pendigits\n",
+      "Finished phoneme\n",
+      "Finished php50jXam\n",
+      "Finished phpGUrE90\n",
+      "Finished phpMD2hR6\n",
+      "Finished phpV5QYya\n",
+      "Finished phpWfYmlu\n",
+      "Finished phphQEck0\n",
+      "Finished phplE7q6h\n",
+      "Finished phpmPOD5A\n",
+      "Finished phpwRjVjk\n",
+      "Finished phpxijhaP\n",
+      "Finished pol\n",
+      "Finished pollen\n",
+      "Finished puma32H\n",
+      "Finished puma8NH\n",
+      "Finished quake\n",
+      "Finished space_ga\n",
+      "Finished spambase\n",
+      "Finished sylva_prior\n",
+      "Finished visualizing_soil\n",
+      "Finished wind\n",
+      "Finished winetype\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>quantifier</th>\n",
+       "      <th>dataset</th>\n",
+       "      <th>sample_size</th>\n",
+       "      <th>sampling_seed</th>\n",
+       "      <th>iteration</th>\n",
+       "      <th>alpha</th>\n",
+       "      <th>pred_prev</th>\n",
+       "      <th>abs_error</th>\n",
+       "      <th>run_time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>(KNN)Top-1</td>\n",
+       "      <td>1043_ada_agnostic</td>\n",
+       "      <td>100</td>\n",
+       "      <td>623</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.062761</td>\n",
+       "      <td>0.062761</td>\n",
+       "      <td>0.058607</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>(KNN)Top-1</td>\n",
+       "      <td>1043_ada_agnostic</td>\n",
+       "      <td>100</td>\n",
+       "      <td>243</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.037312</td>\n",
+       "      <td>0.037312</td>\n",
+       "      <td>0.046871</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>(KNN)Top-1</td>\n",
+       "      <td>1043_ada_agnostic</td>\n",
+       "      <td>100</td>\n",
+       "      <td>18</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.105745</td>\n",
+       "      <td>0.105745</td>\n",
+       "      <td>0.047145</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>(KNN)Top-1</td>\n",
+       "      <td>1043_ada_agnostic</td>\n",
+       "      <td>100</td>\n",
+       "      <td>549</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000045</td>\n",
+       "      <td>0.000045</td>\n",
+       "      <td>0.047411</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>(KNN)Top-1</td>\n",
+       "      <td>1043_ada_agnostic</td>\n",
+       "      <td>100</td>\n",
+       "      <td>447</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.055759</td>\n",
+       "      <td>0.055759</td>\n",
+       "      <td>0.047556</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>439995</th>\n",
+       "      <td>(KNN)Top-9+W</td>\n",
+       "      <td>winetype</td>\n",
+       "      <td>100</td>\n",
+       "      <td>554</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.999352</td>\n",
+       "      <td>0.000648</td>\n",
+       "      <td>0.621482</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>439996</th>\n",
+       "      <td>(KNN)Top-9+W</td>\n",
+       "      <td>winetype</td>\n",
+       "      <td>100</td>\n",
+       "      <td>379</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.999421</td>\n",
+       "      <td>0.000579</td>\n",
+       "      <td>0.614262</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>439997</th>\n",
+       "      <td>(KNN)Top-9+W</td>\n",
+       "      <td>winetype</td>\n",
+       "      <td>100</td>\n",
+       "      <td>348</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.998592</td>\n",
+       "      <td>0.001408</td>\n",
+       "      <td>0.617437</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>439998</th>\n",
+       "      <td>(KNN)Top-9+W</td>\n",
+       "      <td>winetype</td>\n",
+       "      <td>100</td>\n",
+       "      <td>840</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.995666</td>\n",
+       "      <td>0.004334</td>\n",
+       "      <td>0.618087</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>439999</th>\n",
+       "      <td>(KNN)Top-9+W</td>\n",
+       "      <td>winetype</td>\n",
+       "      <td>100</td>\n",
+       "      <td>114</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.991527</td>\n",
+       "      <td>0.008473</td>\n",
+       "      <td>0.616095</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>440000 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          quantifier            dataset  sample_size  sampling_seed  \\\n",
+       "0         (KNN)Top-1  1043_ada_agnostic          100            623   \n",
+       "1         (KNN)Top-1  1043_ada_agnostic          100            243   \n",
+       "2         (KNN)Top-1  1043_ada_agnostic          100             18   \n",
+       "3         (KNN)Top-1  1043_ada_agnostic          100            549   \n",
+       "4         (KNN)Top-1  1043_ada_agnostic          100            447   \n",
+       "...              ...                ...          ...            ...   \n",
+       "439995  (KNN)Top-9+W           winetype          100            554   \n",
+       "439996  (KNN)Top-9+W           winetype          100            379   \n",
+       "439997  (KNN)Top-9+W           winetype          100            348   \n",
+       "439998  (KNN)Top-9+W           winetype          100            840   \n",
+       "439999  (KNN)Top-9+W           winetype          100            114   \n",
+       "\n",
+       "        iteration  alpha  pred_prev  abs_error  run_time  \n",
+       "0               1    0.0   0.062761   0.062761  0.058607  \n",
+       "1               2    0.0   0.037312   0.037312  0.046871  \n",
+       "2               3    0.0   0.105745   0.105745  0.047145  \n",
+       "3               4    0.0   0.000045   0.000045  0.047411  \n",
+       "4               5    0.0   0.055759   0.055759  0.047556  \n",
+       "...           ...    ...        ...        ...       ...  \n",
+       "439995          6    1.0   0.999352   0.000648  0.621482  \n",
+       "439996          7    1.0   0.999421   0.000579  0.614262  \n",
+       "439997          8    1.0   0.998592   0.001408  0.617437  \n",
+       "439998          9    1.0   0.995666   0.004334  0.618087  \n",
+       "439999         10    1.0   0.991527   0.008473  0.616095  \n",
+       "\n",
+       "[440000 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from sklearn.neighbors import NearestNeighbors\n",
     "from ensemble_quantifier import EnsembleQuantifier\n",
