--- a/extracting_meta_features.ipynb
+++ b/extracting_meta_features.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "33ea7b58",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "b8f3f420",
    "metadata": {},
    "outputs": [],
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "4d0e07a1",
    "metadata": {},
    "outputs": [],
@@ -150,7 +150,7 @@
     "                param_grid=param_grid,   # chaves: \"C\", \"epsilon\", \"gamma\", \"kernel\", etc.\n",
     "                scoring=\"neg_mean_absolute_error\",\n",
     "                cv=inner_cv,\n",
-    "                # n_jobs=-1,\n",
+    "                n_jobs=-1,\n",
     "                refit=True,\n",
     "                verbose=0\n",
     "            )\n",
@@ -159,6 +159,8 @@
     "            predicted_error = gs.predict(X_test)[0]\n",
     "\n",
     "            aux_recommender_evaluation_table.loc[(quantifier, dataset)] = [predicted_error, y_test]\n",
+    "\n",
+    "            print(f\"Finished {dataset}\")\n",
     "\n",
     "        print(f\"Finished {quantifier}\")\n",
     "\n",
@@ -199,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "00f2266c",
    "metadata": {},
    "outputs": [],
@@ -296,6 +298,16 @@
     "    not_agg_evaluation_table.reset_index(drop=True, inplace=True)\n",
     "    \n",
     "    return recommender_evaluation_table, not_agg_evaluation_table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dade94ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# RUN"
    ]
   },
   {
@@ -520,129 +532,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "20ffc723",
+   "metadata": {},
+   "source": [
+    "# Fine-Tunning"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "7e30b486",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Finished ACC\n",
-      "Finished CC\n",
-      "Finished DyS\n",
-      "Finished HDy\n",
-      "Finished MAX\n",
-      "Finished MS\n",
-      "Finished PACC\n",
-      "Finished PCC\n",
-      "Finished SMM\n",
-      "Finished SORD\n",
-      "Finished X\n",
-      "Finished 1043_ada_agnostic\n",
-      "Finished 1460_banana\n",
-      "Finished 1462_banknote-authentication\n",
-      "Finished 1466_cardiotocography\n",
-      "Finished 1475_first-order-theorem-proving\n",
-      "Finished 1479_hill-valley\n",
-      "Finished 1485_madelon\n",
-      "Finished 1489_phoneme\n",
-      "Finished 1494_qsar-biodeg\n",
-      "Finished 1496_ringnorm\n",
-      "Finished 1497_wall-robot-navigation\n",
-      "Finished 1504_steel-plates-fault\n",
-      "Finished 1507_twonorm\n",
-      "Finished 1526_wall-robot-navigation\n",
-      "Finished 1535_volcanoes-b5\n",
-      "Finished 1538_volcanoes-d1\n",
-      "Finished 1539_volcanoes-d2\n",
-      "Finished 1540_volcanoes-d3\n",
-      "Finished 1541_volcanoes-d4\n",
-      "Finished 1566_hill-valley\n",
-      "Finished 182_satimage\n",
-      "Finished 23_cmc\n",
-      "Finished 28_optdigits\n",
-      "Finished 294_satellite_image\n",
-      "Finished 2dplanes\n",
-      "Finished 30_page-blocks\n",
-      "Finished 312_scene\n",
-      "Finished 375_JapaneseVowels\n",
-      "Finished 40474_thyroid-allbp\n",
-      "Finished 40475_thyroid-allhyper\n",
-      "Finished 40733_yeast\n",
-      "Finished 44_spambase\n",
-      "Finished 4538_GesturePhaseSegmentationProcessed\n",
-      "Finished 60_waveform-5000\n",
-      "Finished 679_rmftsa_sleepdata\n",
-      "Finished AedesQuinx\n",
-      "Finished AedesSex\n",
-      "Finished ArabicDigit\n",
-      "Finished BNG\n",
-      "Finished BNG_breast-w\n",
-      "Finished GAMETES_Epistasis_2-Way_20atts_0.1H_EDM-1_1\n",
-      "Finished GAMETES_Epistasis_2-Way_20atts_0.4H_EDM-1_1\n",
-      "Finished HTRU\n",
-      "Finished MagicTelescope\n",
-      "Finished abalone\n",
-      "Finished ailerons\n",
-      "Finished anuranCalls\n",
-      "Finished balloon\n",
-      "Finished bank8FM\n",
-      "Finished churn\n",
-      "Finished clean2\n",
-      "Finished click-prediction\n",
-      "Finished cmc\n",
-      "Finished covtype_reduced\n",
-      "Finished cpu_act\n",
-      "Finished default_credit_card_clients\n",
-      "Finished delta_ailerons\n",
-      "Finished eeg\n",
-      "Finished electricity-normalized\n",
-      "Finished elevators\n",
-      "Finished file22f0e4a679\n",
-      "Finished file79b563a1a18\n",
-      "Finished file7b5365fa741c\n",
-      "Finished fri_c2_1000_10\n",
-      "Finished fried\n",
-      "Finished gina_agnostic\n",
-      "Finished houses\n",
-      "Finished jm1-processed\n",
-      "Finished kdd_JapaneseVowels\n",
-      "Finished kin8nm\n",
-      "Finished letter-recognition\n",
-      "Finished magic\n",
-      "Finished mozilla\n",
-      "Finished namao\n",
-      "Finished occupancy\n",
-      "Finished page-blocks\n",
-      "Finished parity5_plus_5\n",
-      "Finished pendigits\n",
-      "Finished phoneme\n",
-      "Finished php50jXam\n",
-      "Finished phpGUrE90\n",
-      "Finished phpMD2hR6\n",
-      "Finished phpV5QYya\n",
-      "Finished phpWfYmlu\n",
-      "Finished phphQEck0\n",
-      "Finished phplE7q6h\n",
-      "Finished phpmPOD5A\n",
-      "Finished phpwRjVjk\n",
-      "Finished phpxijhaP\n",
-      "Finished pol\n",
-      "Finished pollen\n",
-      "Finished puma32H\n",
-      "Finished puma8NH\n",
-      "Finished quake\n",
-      "Finished space_ga\n",
-      "Finished spambase\n",
-      "Finished sylva_prior\n",
-      "Finished visualizing_soil\n",
-      "Finished wind\n",
-      "Finished winetype\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# FINE-TUNNING\n",
     "from ensemble_quantifier import EnsembleQuantifier\n",
@@ -706,6 +608,45 @@
     "\n",
     "    ensemble_qtf = EnsembleQuantifier()\n",
     "    ensemble_qtf.evaluation(\"regression\", REG_SVR_recommender_eval, REG_SVR_quantifiers_eval, f\"./plot_data/experiment-1/results/svr_reg/reg_ensemble_quantifier_evaluation_table_SVR_GRID_2.csv\")\n",
+    "except Exception as e:\n",
+    "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4395f25a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# FINE-TUNNING\n",
+    "from ensemble_quantifier import EnsembleQuantifier\n",
+    "try:\n",
+    "    from sklearn.svm import SVR\n",
+    "\n",
+    "    model=SVR()\n",
+    "\n",
+    "    meta_features_table = meta_features\n",
+    "    evaluation_table = reg_quantifiers_eval_agg\n",
+    "    not_aggregated_evaluation_table = reg_quantifiers_eval\n",
+    "\n",
+    "    param_grid = {\n",
+    "        \"kernel\": [\"poly\"],\n",
+    "        \"C\": [0.1, 1, 10, 100],\n",
+    "        \"degree\": [2, 3, 4],\n",
+    "        \"gamma\": [\"scale\", 0.01, 0.1],\n",
+    "        \"coef0\": [0, 0.1, 1],\n",
+    "        \"epsilon\": [0.01, 0.1, 0.5]\n",
+    "    }\n",
+    "\n",
+    "    model_dict = fit_regressor(model=model, meta_features_table=meta_features_table, not_aggregated_evaluation_table=not_aggregated_evaluation_table, evaluation_table=evaluation_table)\n",
+    "    REG_SVR_recommender_eval, REG_SVR_quantifiers_eval = loo_grid_reg(model_dict, meta_features_table, not_aggregated_evaluation_table, evaluation_table, param_grid, RESULTS_DIR + \"svr_regressor_recommendation_eval_GRID_3.csv\")\n",
+    "\n",
+    "    REG_SVR_recommender_eval.to_csv(f\"./plot_data/experiment-1/results/svr_reg/svr_reg_recommender_eval_GRID_3.csv\")\n",
+    "    REG_SVR_quantifiers_eval.to_csv(f\"./plot_data/experiment-1/results/svr_reg/svr_reg_quantifiers_eval_GRID_3.csv\")\n",
+    "\n",
+    "    ensemble_qtf = EnsembleQuantifier()\n",
+    "    ensemble_qtf.evaluation(\"regression\", REG_SVR_recommender_eval, REG_SVR_quantifiers_eval, f\"./plot_data/experiment-1/results/svr_reg/reg_ensemble_quantifier_evaluation_table_SVR_GRID_3.csv\")\n",
     "except Exception as e:\n",
     "    print(e)"
    ]
