--- a/extracting_meta_features_NEW.ipynb
+++ b/extracting_meta_features_NEW.ipynb
@@ -126,7 +126,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import GridSearchCV, KFold\n",
+    "from sklearn.model_selection import GridSearchCV, KFold, RandomizedSearchCV\n",
     "from sklearn.pipeline import Pipeline\n",
     "\n",
     "# Evaluate Quantifier Recommender with Leave-One-Out\n",
@@ -145,14 +145,25 @@
     "\n",
     "            # nested tuning (inner CV) dentro do fold LOO (outer)\n",
     "            inner_cv = KFold(n_splits=5, shuffle=True, random_state=42)\n",
-    "            gs = GridSearchCV(\n",
+    "            # gs = GridSearchCV(\n",
+    "            #     estimator=recommender_,\n",
+    "            #     param_grid=param_grid,   # chaves: \"C\", \"epsilon\", \"gamma\", \"kernel\", etc.\n",
+    "            #     scoring=\"neg_mean_absolute_error\",\n",
+    "            #     cv=inner_cv,\n",
+    "            #     n_jobs=-1,\n",
+    "            #     refit=True,\n",
+    "            #     verbose=0\n",
+    "            # )\n",
+    "            gs = RandomizedSearchCV(\n",
     "                estimator=recommender_,\n",
-    "                param_grid=param_grid,   # chaves: \"C\", \"epsilon\", \"gamma\", \"kernel\", etc.\n",
+    "                param_distributions=param_grid,  # pode reaproveitar o mesmo dict do grid\n",
+    "                n_iter=10,                       # ajuste conforme custo/tempo\n",
     "                scoring=\"neg_mean_absolute_error\",\n",
     "                cv=inner_cv,\n",
     "                n_jobs=-1,\n",
     "                refit=True,\n",
-    "                verbose=0\n",
+    "                verbose=0,\n",
+    "                random_state=42                  # para reprodutibilidade\n",
     "            )\n",
     "            gs.fit(X_train, y_train)\n",
     "            \n",
