KNN ARR GRID START

--- a/extracting_meta_features_NEW.ipynb
+++ b/extracting_meta_features_NEW.ipynb
@@ -322,6 +322,7 @@
     "import numpy as np\n",
     "from sklearn.base import BaseEstimator\n",
     "from sklearn.neighbors import NearestNeighbors\n",
+    "from skopt import BayesSearchCV\n",
     "\n",
     "class ARRKNN(BaseEstimator):\n",
     "    def __init__(self, n_neighbors=5, metric=\"minkowski\", p=2, algorithm=\"auto\", tolerance=1e-10):\n",
@@ -392,14 +393,25 @@
     "        # nested tuning interno\n",
     "        inner_cv = KFold(n_splits=5, shuffle=True, random_state=42)\n",
     "\n",
-    "        gs = GridSearchCV(\n",
+    "        # gs = GridSearchCV(\n",
+    "        #     estimator=clone(model),\n",
+    "        #     param_grid=param_grid,\n",
+    "        #     scoring=\"neg_mean_absolute_error\",  # funciona com multioutput: agrega MAE nos outputs\n",
+    "        #     cv=inner_cv,\n",
+    "        #     n_jobs=-1,\n",
+    "        #     refit=True,\n",
+    "        #     verbose=0\n",
+    "        # )\n",
+    "        gs = BayesSearchCV(\n",
     "            estimator=clone(model),\n",
-    "            param_grid=param_grid,\n",
-    "            scoring=\"neg_mean_absolute_error\",  # funciona com multioutput: agrega MAE nos outputs\n",
+    "            search_spaces=param_grid,\n",
+    "            n_iter=25,\n",
+    "            scoring=\"neg_mean_absolute_error\",\n",
     "            cv=inner_cv,\n",
     "            n_jobs=-1,\n",
     "            refit=True,\n",
-    "            verbose=0\n",
+    "            verbose=0,\n",
+    "            random_state=42\n",
     "        )\n",
     "        gs.fit(transformed_train, y_train)\n",
     "\n",
@@ -669,6 +681,42 @@
    "metadata": {},
    "source": [
     "# Fine-Tunning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b0b50119",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# FINE-TUNNING --> KNN ARR\n",
+    "from ensemble_quantifier import EnsembleQuantifier\n",
+    "from sklearn.neighbors import KNeighborsRegressor\n",
+    "from skopt.space import Integer, Real, Categorical\n",
+    "\n",
+    "try:\n",
+    "    model = NearestNeighbors()\n",
+    "\n",
+    "    meta_features_table = meta_features\n",
+    "    evaluation_table = knn_quantifiers_eval_agg\n",
+    "    not_aggregated_evaluation_table = knn_quantifiers_eval\n",
+    "\n",
+    "    param_grid = {\n",
+    "        \"n_neighbors\": Integer(1, 50),\n",
+    "        \"weights\": Categorical([\"uniform\", \"distance\"]),\n",
+    "    }\n",
+    "\n",
+    "    knn, arr_table = fit_knn(model, meta_features_table, not_aggregated_evaluation_table, evaluation_table)\n",
+    "    knn_recommender_eval, knn_quantifiers_eval = loo_grid_knn(knn, arr_table, meta_features_table, not_aggregated_evaluation_table, evaluation_table, RESULTS_DIR + \"knn_1_recommendation_eval_GRID.csv\")\n",
+    "    \n",
+    "    knn_recommender_eval.to_csv(f\"./plot_data/experiment-1/results/knn_1/knn_1_recommender_eval_GRID.csv\")\n",
+    "    knn_quantifiers_eval.to_csv(f\"./plot_data/experiment-1/results/knn_1/knn_1_quantifiers_eval_GRID.csv\")\n",
+    "    \n",
+    "    ensemble_qtf = EnsembleQuantifier()\n",
+    "    ensemble_qtf.evaluation_opt(\"knn\", knn_recommender_eval, knn_quantifiers_eval, f\"./plot_data/experiment-1/results/knn_1/knn_1_ensemble_quantifier_evaluation_table_GRID.csv\")\n",
+    "except Exception as e:\n",
+    "    print(e)"
    ]
   },
   {
