starting knn bayes arr

--- a/extracting_meta_features_NEW.ipynb
+++ b/extracting_meta_features_NEW.ipynb
@@ -320,22 +320,35 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from sklearn.base import BaseEstimator\n",
+    "import pandas as pd\n",
+    "\n",
+    "from sklearn.base import BaseEstimator, clone\n",
     "from sklearn.neighbors import NearestNeighbors\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "from sklearn.model_selection import KFold\n",
+    "\n",
     "from skopt import BayesSearchCV\n",
     "\n",
+    "\n",
     "class ARRKNN(BaseEstimator):\n",
-    "    def __init__(self, n_neighbors=5, metric=\"minkowski\", p=2, algorithm=\"auto\", tolerance=1e-10):\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        n_neighbors=5,\n",
+    "        weights=\"distance\",          # <- ADICIONADO\n",
+    "        metric=\"minkowski\",\n",
+    "        p=2,\n",
+    "        algorithm=\"auto\",\n",
+    "        tolerance=1e-10\n",
+    "    ):\n",
     "        self.n_neighbors = n_neighbors\n",
+    "        self.weights = weights       # <- ADICIONADO\n",
     "        self.metric = metric\n",
     "        self.p = p\n",
     "        self.algorithm = algorithm\n",
     "        self.tolerance = tolerance\n",
     "\n",
     "    def fit(self, X, y):\n",
-    "        # y: (n_samples, n_quantifiers)  -> ARR vetor por dataset\n",
     "        self._y_train = np.asarray(y)\n",
-    "\n",
     "        self._nn = NearestNeighbors(\n",
     "            n_neighbors=self.n_neighbors,\n",
     "            metric=self.metric,\n",
@@ -350,58 +363,53 @@
     "\n",
     "        preds = []\n",
     "        for dists, idxs in zip(distances, indices):\n",
-    "            w = 1.0 / (dists + self.tolerance)\n",
+    "            if self.weights == \"uniform\":\n",
+    "                w = np.ones_like(dists, dtype=float)\n",
+    "            else:  # \"distance\"\n",
+    "                w = 1.0 / (dists + self.tolerance)\n",
+    "\n",
     "            w = w / np.sum(w)\n",
-    "            # média ponderada dos vetores ARR dos vizinhos\n",
     "            pred_vec = np.sum(self._y_train[idxs] * w[:, None], axis=0)\n",
     "            preds.append(pred_vec)\n",
     "\n",
     "        return np.asarray(preds)  # (n_samples, n_quantifiers)\n",
     "\n",
     "\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "from sklearn.base import clone\n",
-    "from sklearn.preprocessing import MinMaxScaler\n",
-    "from sklearn.model_selection import GridSearchCV, KFold\n",
-    "\n",
-    "def loo_grid_knn(model, arr_table, meta_features_table, not_aggregated_evaluation_table, evaluation_table,\n",
-    "                 param_grid, recommender_eval_path: str = None):\n",
+    "def loo_grid_knn(\n",
+    "    model,\n",
+    "    arr_table,\n",
+    "    meta_features_table,\n",
+    "    not_aggregated_evaluation_table,\n",
+    "    evaluation_table,   # (mantido por compatibilidade, não usado)\n",
+    "    param_grid,\n",
+    "    recommender_eval_path: str = None\n",
+    "):\n",
     "    recommender_evaluation_table = pd.DataFrame(\n",
-    "        columns=[\"predicted_ranking\",\n",
-    "                 \"predicted_ranking_weights\",\n",
-    "                 \"predicted_ranking_arr\",\n",
-    "                 \"true_ranking\",\n",
-    "                 \"true_ranking_weights\",\n",
-    "                 \"true_ranking_arr\"],\n",
+    "        columns=[\n",
+    "            \"predicted_ranking\",\n",
+    "            \"predicted_ranking_weights\",\n",
+    "            \"predicted_ranking_arr\",\n",
+    "            \"true_ranking\",\n",
+    "            \"true_ranking_weights\",\n",
+    "            \"true_ranking_arr\"\n",
+    "        ],\n",
     "        index=arr_table.index.tolist()\n",
     "    )\n",
     "\n",
     "    for dataset in arr_table.index.tolist():\n",
     "        X_test = meta_features_table.loc[dataset].values.reshape(1, -1)\n",
-    "        y_test = arr_table.loc[dataset].values  # vetor ARR verdadeiro\n",
+    "        y_test = arr_table.loc[dataset].values\n",
     "\n",
     "        X_train = meta_features_table.drop(index=dataset).values\n",
-    "        y_train = arr_table.drop(index=dataset).values  # matriz (99, n_quantifiers)\n",
+    "        y_train = arr_table.drop(index=dataset).values\n",
     "\n",
-    "        # mantém seu scaling (fit só no treino do fold externo)\n",
     "        transform_pipeline_ = MinMaxScaler()\n",
     "        transform_pipeline_.fit(X_train)\n",
     "        transformed_train = transform_pipeline_.transform(X_train)\n",
     "        transformed_test = transform_pipeline_.transform(X_test)\n",
     "\n",
-    "        # nested tuning interno\n",
     "        inner_cv = KFold(n_splits=5, shuffle=True, random_state=42)\n",
     "\n",
-    "        # gs = GridSearchCV(\n",
-    "        #     estimator=clone(model),\n",
-    "        #     param_grid=param_grid,\n",
-    "        #     scoring=\"neg_mean_absolute_error\",  # funciona com multioutput: agrega MAE nos outputs\n",
-    "        #     cv=inner_cv,\n",
-    "        #     n_jobs=-1,\n",
-    "        #     refit=True,\n",
-    "        #     verbose=0\n",
-    "        # )\n",
     "        gs = BayesSearchCV(\n",
     "            estimator=clone(model),\n",
     "            search_spaces=param_grid,\n",
@@ -415,7 +423,6 @@
     "        )\n",
     "        gs.fit(transformed_train, y_train)\n",
     "\n",
-    "        # previsão do vetor ARR (igual ao seu new_arr_array)\n",
     "        new_arr_array = gs.best_estimator_.predict(transformed_test)[0]\n",
     "\n",
     "        quantifiers = arr_table.columns\n",
@@ -433,6 +440,8 @@
     "            true_ranking, true_ranking_weights, true_arr\n",
     "        ]\n",
     "\n",
+    "        print(f\"Finished {dataset}\")\n",
+    "\n",
     "    if recommender_eval_path is not None:\n",
     "        recommender_evaluation_table.to_csv(recommender_eval_path)\n",
     "\n",
@@ -440,8 +449,7 @@
     "    not_agg_evaluation_table.sort_values(by=[\"quantifier\", \"dataset\"], inplace=True)\n",
     "    not_agg_evaluation_table.reset_index(drop=True, inplace=True)\n",
     "\n",
-    "    return recommender_evaluation_table, not_agg_evaluation_table\n",
-    "\n"
+    "    return recommender_evaluation_table, not_agg_evaluation_table\n"
    ]
   },
   {
@@ -692,31 +700,52 @@
    "source": [
     "# FINE-TUNNING --> KNN ARR\n",
     "from ensemble_quantifier import EnsembleQuantifier\n",
-    "from sklearn.neighbors import KNeighborsRegressor\n",
-    "from skopt.space import Integer, Real, Categorical\n",
+    "from skopt.space import Integer, Categorical\n",
     "\n",
     "try:\n",
-    "    model = NearestNeighbors()\n",
-    "\n",
     "    meta_features_table = meta_features\n",
     "    evaluation_table = knn_quantifiers_eval_agg\n",
     "    not_aggregated_evaluation_table = knn_quantifiers_eval\n",
     "\n",
+    "    base_nn = NearestNeighbors()\n",
+    "\n",
+    "    # modelo certo (tem predict e aceita weights)\n",
+    "    model = ARRKNN()\n",
+    "\n",
+    "    # search space pro BayesSearch\n",
     "    param_grid = {\n",
     "        \"n_neighbors\": Integer(1, 50),\n",
     "        \"weights\": Categorical([\"uniform\", \"distance\"]),\n",
+    "        \"metric\": Categorical([\"euclidean\", \"manhattan\", \"minkowski\"]),\n",
     "    }\n",
     "\n",
-    "    knn, arr_table = fit_knn(model, meta_features_table, not_aggregated_evaluation_table, evaluation_table)\n",
-    "    knn_recommender_eval, knn_quantifiers_eval = loo_grid_knn(knn, arr_table, meta_features_table, not_aggregated_evaluation_table, evaluation_table, RESULTS_DIR + \"knn_1_recommendation_eval_GRID.csv\")\n",
-    "    \n",
-    "    knn_recommender_eval.to_csv(f\"./plot_data/experiment-1/results/knn_1/knn_1_recommender_eval_GRID.csv\")\n",
-    "    knn_quantifiers_eval.to_csv(f\"./plot_data/experiment-1/results/knn_1/knn_1_quantifiers_eval_GRID.csv\")\n",
-    "    \n",
+    "    # você provavelmente precisa do arr_table aqui\n",
+    "    # (mantenho sua chamada; só não precisa usar o \"model\" de lá como estimador do Bayes)\n",
+    "    _, arr_table = fit_knn(base_nn, meta_features_table, not_aggregated_evaluation_table, evaluation_table)\n",
+    "\n",
+    "    knn_recommender_eval, knn_quantifiers_eval = loo_grid_knn(\n",
+    "        model,\n",
+    "        arr_table,\n",
+    "        meta_features_table,\n",
+    "        not_aggregated_evaluation_table,\n",
+    "        evaluation_table,\n",
+    "        param_grid,\n",
+    "        RESULTS_DIR + \"knn_1_recommendation_eval_GRID.csv\"\n",
+    "    )\n",
+    "\n",
+    "    knn_recommender_eval.to_csv(\"./plot_data/experiment-1/results/knn_1/knn_1_recommender_eval_GRID.csv\")\n",
+    "    knn_quantifiers_eval.to_csv(\"./plot_data/experiment-1/results/knn_1/knn_1_quantifiers_eval_GRID.csv\")\n",
+    "\n",
     "    ensemble_qtf = EnsembleQuantifier()\n",
-    "    ensemble_qtf.evaluation_opt(\"knn\", knn_recommender_eval, knn_quantifiers_eval, f\"./plot_data/experiment-1/results/knn_1/knn_1_ensemble_quantifier_evaluation_table_GRID.csv\")\n",
+    "    ensemble_qtf.evaluation_opt(\n",
+    "        \"knn\",\n",
+    "        knn_recommender_eval,\n",
+    "        knn_quantifiers_eval,\n",
+    "        \"./plot_data/experiment-1/results/knn_1/knn_1_ensemble_quantifier_evaluation_table_GRID.csv\"\n",
+    "    )\n",
+    "\n",
     "except Exception as e:\n",
-    "    print(e)"
+    "    print(e)\n"
    ]
   },
   {
