knn arr grid done

--- a/extracting_meta_features_NEW.ipynb
+++ b/extracting_meta_features_NEW.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "33ea7b58",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "b8f3f420",
    "metadata": {},
    "outputs": [],
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "4d0e07a1",
    "metadata": {},
    "outputs": [],
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "00f2266c",
    "metadata": {},
    "outputs": [],
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "e13ca5a1",
    "metadata": {},
    "outputs": [],
@@ -334,14 +334,14 @@
     "    def __init__(\n",
     "        self,\n",
     "        n_neighbors=5,\n",
-    "        weights=\"distance\",          # <- ADICIONADO\n",
+    "        weights=\"distance\",\n",
     "        metric=\"minkowski\",\n",
     "        p=2,\n",
     "        algorithm=\"auto\",\n",
     "        tolerance=1e-10\n",
     "    ):\n",
     "        self.n_neighbors = n_neighbors\n",
-    "        self.weights = weights       # <- ADICIONADO\n",
+    "        self.weights = weights\n",
     "        self.metric = metric\n",
     "        self.p = p\n",
     "        self.algorithm = algorithm\n",
@@ -380,7 +380,7 @@
     "    arr_table,\n",
     "    meta_features_table,\n",
     "    not_aggregated_evaluation_table,\n",
-    "    evaluation_table,   # (mantido por compatibilidade, não usado)\n",
+    "    evaluation_table,   # compat\n",
     "    param_grid,\n",
     "    recommender_eval_path: str = None\n",
     "):\n",
@@ -427,13 +427,23 @@
     "\n",
     "        quantifiers = arr_table.columns\n",
     "\n",
+    "        # ---- predicted (mantém lógica; só converte para list) ----\n",
     "        quantifier_arr_pairs = sorted(zip(quantifiers, new_arr_array), key=lambda x: x[1], reverse=True)\n",
     "        predicted_ranking, predicted_arr = zip(*quantifier_arr_pairs)\n",
-    "        predicted_ranking_weights = np.array(predicted_arr) / np.sum(predicted_arr)\n",
     "\n",
+    "        predicted_ranking = list(predicted_ranking)  # <- FIX\n",
+    "        predicted_arr = list(predicted_arr)          # <- FIX (para manter tudo homogêneo)\n",
+    "\n",
+    "        predicted_ranking_weights = np.array(predicted_arr, dtype=float) / np.sum(predicted_arr)\n",
+    "\n",
+    "        # ---- true (mantém lógica; só converte para list) ----\n",
     "        quantifier_arr_pairs = sorted(zip(quantifiers, y_test), key=lambda x: x[1], reverse=True)\n",
     "        true_ranking, true_arr = zip(*quantifier_arr_pairs)\n",
-    "        true_ranking_weights = np.array(true_arr) / np.sum(true_arr)\n",
+    "\n",
+    "        true_ranking = list(true_ranking)  # <- FIX\n",
+    "        true_arr = list(true_arr)          # <- FIX\n",
+    "\n",
+    "        true_ranking_weights = np.array(true_arr, dtype=float) / np.sum(true_arr)\n",
     "\n",
     "        recommender_evaluation_table.loc[dataset] = [\n",
     "            predicted_ranking, predicted_ranking_weights, predicted_arr,\n",
@@ -449,7 +459,8 @@
     "    not_agg_evaluation_table.sort_values(by=[\"quantifier\", \"dataset\"], inplace=True)\n",
     "    not_agg_evaluation_table.reset_index(drop=True, inplace=True)\n",
     "\n",
-    "    return recommender_evaluation_table, not_agg_evaluation_table\n"
+    "    return recommender_evaluation_table, not_agg_evaluation_table\n",
+    "\n"
    ]
   },
   {
@@ -737,7 +748,7 @@
     "    knn_quantifiers_eval.to_csv(\"./plot_data/experiment-1/results/knn_1/knn_1_quantifiers_eval_GRID.csv\")\n",
     "\n",
     "    ensemble_qtf = EnsembleQuantifier()\n",
-    "    ensemble_qtf.evaluation_opt(\n",
+    "    eval = ensemble_qtf.evaluation_opt(\n",
     "        \"knn\",\n",
     "        knn_recommender_eval,\n",
     "        knn_quantifiers_eval,\n",
@@ -746,6 +757,16 @@
     "\n",
     "except Exception as e:\n",
     "    print(e)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0463d52b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "knn_quantifiers_eval"
    ]
   },
   {
