--- a/plots.ipynb
+++ b/plots.ipynb
@@ -49,12 +49,18 @@
     "# reg_ensemble_quantifier_eval = pd.read_csv(path+\"results/rf_reg/reg_ensemble_quantifier_evaluation_table_RF_GRID.csv\")\n",
     "\n",
     "# reg_ensemble_quantifier_eval = pd.read_csv(path+\"results/svr_reg/reg_ensemble_quantifier_evaluation_table_SVR.csv\")\n",
+    "# reg_ensemble_quantifier_eval = pd.read_csv(path+\"results/svr_reg/reg_ensemble_quantifier_evaluation_table_SVR_GRID.csv\")\n",
+    "\n",
+    "\n",
     "# reg_ensemble_quantifier_eval = pd.read_csv(path+\"results/svr_reg/reg_ensemble_quantifier_evaluation_table_SVR_GRID_1.csv\")\n",
     "# reg_ensemble_quantifier_eval = pd.read_csv(path+\"results/svr_reg/reg_ensemble_quantifier_evaluation_table_SVR_GRID_2.csv\")\n",
     "\n",
     "# reg_ensemble_quantifier_eval = pd.read_csv(path+\"results/xgbr_reg/reg_ensemble_quantifier_evaluation_table_XGBR.csv\")\n",
     "\n",
-    "knn_ensemble_quantifier_eval = pd.read_csv(path+\"knn_ensemble_quantifier_evaluation_table.csv\")\n",
+    "# knn_ensemble_quantifier_eval = pd.read_csv(path+\"knn_ensemble_quantifier_evaluation_table.csv\")\n",
+    "knn_ensemble_quantifier_eval = pd.read_csv(path+\"knn_1_ensemble_quantifier_evaluation_table.csv\")\n",
+    "knn_ensemble_quantifier_eval = pd.read_csv(path+\"knn_1_ensemble_quantifier_evaluation_table_GRID.csv\")\n",
+    "\n",
     "eval_table = pd.concat([quantifiers_eval, reg_ensemble_quantifier_eval, knn_ensemble_quantifier_eval], axis=0)\n",
     "\n",
     "\n",
